ArgoCD/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argocd-ingress
  namespace: argocd
  annotations:
    kubernetes.io/ingress.class: alb

    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip

    # Same ALB for all applications
    alb.ingress.kubernetes.io/group.name: three-tier-platform

    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP":80}]'

    # ArgoCD uses HTTPS internally
    alb.ingress.kubernetes.io/backend-protocol: HTTPS

spec:
  ingressClassName: alb

  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: argocd-server
            port:
              number: 443
